feat: added search bar frontend

--- a/frontend/FarmersMarket/src/app/app.component.html
+++ b/frontend/FarmersMarket/src/app/app.component.html
@@ -6,4 +6,10 @@
   <div class = "servicename">
     Farmers Market For All
   </div>
+
+</div>
+
+
+<div class = "search-form">
+  <SearchBar></SearchBar>
 </div>
