feat: initial home page works

--- a/frontend/FarmersMarket/src/app/app.component.html
+++ b/frontend/FarmersMarket/src/app/app.component.html
@@ -11,5 +11,11 @@
 
 
 <div class = "search-form">
-  <SearchBar></SearchBar>
-</div>
+    <SearchBar></SearchBar>
+    <div class = "loco-filter-select">
+      <input type="radio" id="age1" name="age" value="30">
+      <label for="age1">By State</label><br>
+      <input type="radio" id="age2" name="age" value="60">
+      <label for="age2">By Zipcode</label><br>  
+    </div>  
+  </div>
