--- a/frontend/FarmersMarket/src/app/app.component.scss
+++ b/frontend/FarmersMarket/src/app/app.component.scss
@@ -23,3 +23,15 @@
     color: white;
     font-weight: bold;
 }
+
+
+.search-form {
+    margin-top: 18rem;
+    text-align: center;
+}
+
+.loco-filter-select {
+    float: right;
+    margin-right: 625px;
+    margin-top: 16px;
+}
