--- a/frontend/FarmersMarket/src/app/search-bar/search-bar.component.scss
+++ b/frontend/FarmersMarket/src/app/search-bar/search-bar.component.scss
@@ -1,9 +1,12 @@
 .search-input input {
     all: unset;
     border-radius: 4rem; 
-    border: 1px solid black;  
+    border: 1px solid black; 
+    height: 40px;
+    width: 300px; 
 }
 
 .search-icon, .search-input {
     display: inline-block;
+    padding-left: 8px;
 }
