feat: beautiful starting front-page

--- a/frontend/FarmersMarket/src/app/app.component.html
+++ b/frontend/FarmersMarket/src/app/app.component.html
@@ -1,21 +1,7 @@
-<div class = "header">
-  <div class = "logo">
-    <img src = "/assets/logo.svg"/>
-  </div>
-
-  <div class = "servicename">
-    Farmers Market For All
-  </div>
-
+<div>
+    <Header></Header>
 </div>
 
-
-<div class = "search-form">
-    <SearchBar></SearchBar>
-    <div class = "loco-filter-select">
-      <input type="radio" id="age1" name="age" value="30">
-      <label for="age1">By State</label><br>
-      <input type="radio" id="age2" name="age" value="60">
-      <label for="age2">By Zipcode</label><br>  
-    </div>  
-  </div>
+<div class="search-form flex items-center justify-center min-h-screen">
+  <SearchBar class="w-4/5"></SearchBar>
+</div>
