--- a/frontend/FarmersMarket/src/app/search-bar/search-bar.component.html
+++ b/frontend/FarmersMarket/src/app/search-bar/search-bar.component.html
@@ -1,11 +1,20 @@
-
-<div class="search-bar">
-    <div class = "search-input">
-        <input type = "text" />
+<div class="mx-8 w-full">
+    <!-- src/app/search-bar/search-bar.component.html -->
+    <div class="flex items-center justify-end border rounded-md p-2">
+        <input type="text" placeholder="Search..." class="flex-1 px-2 py-1 rounded-md border-none focus:outline-none" />
+        <button class="ml-2 bg-blue-500 text-white px-4 py-2 rounded-md">
+            Search
+        </button>
     </div>
-    <div class = "search-icon">
-        <span class="material-symbols-outlined">
-            search
-        </span>
+
+    <div class="mt-4 flex items-center justify-end">
+        <label class="inline-flex items-center">
+            <input type="radio" name="searchOption" value="byState" class="form-radio h-5 w-5 text-blue-600" />
+            <span class="ml-2 text-gray-700">By State</span>
+        </label>
+        <label class="inline-flex items-center ml-6">
+            <input type="radio" name="searchOption" value="byZipcode" class="form-radio h-5 w-5 text-blue-600" />
+            <span class="ml-2 text-gray-700">By Zipcode</span>
+        </label>
     </div>
 </div>
